--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -8,7 +8,7 @@
   "confirmation_sendButtonLabel": "发送",
   "confirmation_cancelButtonLabel": "取消",
 
-  "confirmation_safeBccThresholdCheckboxLabel": "[警告] To/Cc 包含${threshold}个以上的域",
+  "confirmation_safeBccThresholdCheckboxLabel": "[警告] To/Cc 包含${threshold}个以上的域。请确认是否需要更改为密送（Bcc）。",
   "confirmation_safeBccThresholdForAttendeesCheckboxLabel": "[警告] 与会者 包含${threshold}个以上的域",
   "confirmation_unsafeDomainRecipientCheckboxLabel": "[警告] 包含不安全的域 (${domain})",
   "confirmation_unsafeRecipientCheckboxLabel": "[警告] 包含不安全地址 (${address})",
@@ -33,7 +33,7 @@
   "newlyAddedDomainReconfirmation_caption": "警告！",
   "newlyAddedDomainReconfirmation_messageBefore": "收件人添加了以下原邮件收件人中未包含的域名地址。",
   "newlyAddedDomainReconfirmation_messageBeforeForAppointment": "添加了变更前的日程出席者中未包含的以下域的出席者。",
-  "Reconfirmation_safeBccReconfirmationThresholdWarning": "To/Cc 包含${threshold}个以上的域。",
+  "Reconfirmation_safeBccReconfirmationThresholdWarning": "To/Cc 包含${threshold}个以上的域。请确认是否需要更改为密送（Bcc）。",
   "Reconfirmation_safeBccReconfirmationThresholdAttendeesWarning": "与会者 包含${threshold}个以上的域。",
   "Reconfirmation_unsafeDomains": "包含以下需要注意的域名。",
   "Reconfirmation_unsafeAddresses": "包含以下需要注意的收件人。",
