locale: improve messages

--- a/locales/en.json
+++ b/locales/en.json
@@ -13,6 +13,7 @@
   "confirmation_unsafeDomainRecipientCheckboxLabel": "[Warn] An unsafe domain \"${domain}\" found in the recipient list",
   "confirmation_unsafeRecipientCheckboxLabel": "[Warn] An unsafe address \"${address}\" found in the recipient list",
   "confirmation_unsafeAttachmentCheckboxLabel": "[Warn] An unsafe keyword (${name}) found in the attachment list",
+  "confirmation_unsafeDistributionListCheckboxLabel": "[Warn] An unexpanded distribution list or contact group (${name}) found in the recipient list",
   "confirmation_attachmentCheckboxLabel": "[Attachment] ${name}",
   "confirmation_requiredAttendee": "Required Attendee",
   "confirmation_optionalAttendee": "Optional Attendee",
@@ -21,7 +22,7 @@
   "block_messageBeforeForAppointmentRecipients": "This event cannot be sent because its recipients contain forbidden recipients.",
   "block_messageBeforeForMailDistributionLists": "This mail cannot be sent because unexpanded distribution lists or contact groups have been specified.",
   "block_messageBeforeForAppointmentDistributionLists": "This event cannot be sent because unexpanded distribution lists or contact groups have been specified.",
-  "block_messageAfterDistributionLists": "Please expand the distribution lists or contact groups.",
+  "block_messageAfterForDistributionLists": "Please expand the distribution lists or contact groups.",
   "block_messageAfterForRecipients": "Please change the recipients.",
   "block_messageBeforeForMailAttachments": "The mail cannot be sent because its attachments contain forbidden files.",
   "block_messageBeforeForAppointmentAttachments": "The appointment cannot be sent because its attachments contain forbidden files.",
