--- a/locales/ja.json
+++ b/locales/ja.json
@@ -13,6 +13,7 @@
   "confirmation_unsafeDomainRecipientCheckboxLabel": "[警告] 注意が必要なドメイン（${domain}）が宛先に含まれています。",
   "confirmation_unsafeRecipientCheckboxLabel": "[警告] 注意が必要な宛先（${address}）が含まれています。",
   "confirmation_unsafeAttachmentCheckboxLabel": "[警告] 注意が必要なファイル名（${name}）が含まれています。",
+  "confirmation_unsafeDistributionListCheckboxLabel": "[警告] 未展開の配布リスト、連絡グループ（${name}）が含まれています。",
   "confirmation_attachmentCheckboxLabel": "[添付ファイル] ${name}",
   "confirmation_requiredAttendee": "必須出席者",
   "confirmation_optionalAttendee": "任意出席者",
@@ -21,7 +22,7 @@
   "block_messageBeforeForAppointmentRecipients": "送信が禁止された宛先が指定されているため、予定を送信できません。",
   "block_messageBeforeForMailDistributionLists": "未展開の配布リスト、連絡グループが指定されているため、メールを送信できません。",
   "block_messageBeforeForAppointmentDistributionLists": "未展開の配布リスト、連絡グループが指定されているため、予定を送信できません。",
-  "block_messageAfterDistributionLists": "配布リスト、連絡グループを展開してください。",
+  "block_messageAfterForDistributionLists": "配布リスト、連絡グループを展開してください。",
   "block_messageAfterForRecipients": "宛先を変更してください。",
   "block_messageBeforeForMailAttachments": "送信が禁止されたファイルが添付されているため、メールを送信できません。",
   "block_messageBeforeForAppointmentAttachments": "送信が禁止されたファイルが添付されているため、予定を送信できません。",
