--- a/locales/zh-CN.json
+++ b/locales/zh-CN.json
@@ -13,6 +13,7 @@
   "confirmation_unsafeDomainRecipientCheckboxLabel": "[警告] 包含不安全的域 (${domain})",
   "confirmation_unsafeRecipientCheckboxLabel": "[警告] 包含不安全地址 (${address})",
   "confirmation_unsafeAttachmentCheckboxLabel": "[警告] 包含不安全的文件名 (${name})",
+  "confirmation_unsafeDistributionListCheckboxLabel": "[警告] 包含未展开的分发列表、联系人组 (${name})",
   "confirmation_attachmentCheckboxLabel": "[附件] ${name}",
   "confirmation_requiredAttendee": "必需的与会者",
   "confirmation_optionalAttendee": "可选与会者",
@@ -21,7 +22,7 @@
   "block_messageBeforeForAppointmentRecipients": "由于指定了被禁止发送的收件人，所以无法发送日程预定。",
   "block_messageBeforeForMailDistributionLists": "由于指定了未展开的分发列表、联系人组，所以无法发送邮件。",
   "block_messageBeforeForAppointmentDistributionLists": "由于指定了未展开的分发列表、联系人组，所以无法发送日程预定。",
-  "block_messageAfterDistributionLists": "请展开分发列表、联系人组。",
+  "block_messageAfterForDistributionLists": "请展开分发列表、联系人组。",
   "block_messageAfterForRecipients": "请更改收件人。",
   "block_messageBeforeForMailAttachments": "由于附加了禁止发送的文件，所以无法发送邮件。",
   "block_messageBeforeForAppointmentAttachments": "由于附加了禁止发送的文件，所以无法发送日程预定。",
