Add support for custom locale

--- a/tests/fixtures/locales/ja-JP.json
+++ b/tests/fixtures/locales/ja-JP.json
@@ -3,5 +3,6 @@
   "blankMessage": "",
   "messageWithPlaceholders": "JP：プレースホルダーを含むメッセージ：${one}, ${two}, ${three}",
   "_missingFallbackMessage": "JP：フォールバック先で定義されているメッセージ",
-  "_missingMessage": "JP：未定義のメッセージ"
+  "_missingMessage": "JP：未定義のメッセージ",
+  "customOverrideMessage": "JP：カスタムロケールに上書きされるメッセージ"
 }
